MMTI - Implement Content Links
- Updating Related Documents and External Links

--- a/modules/authorizations/client/views/authorizations.html
+++ b/modules/authorizations/client/views/authorizations.html
@@ -6,13 +6,13 @@
         <div class="container-inner">
             <div class="hb-txt">
                 <h1>Authorizations</h1>
-                <p class="mb-2">Major mines in British Columbia require authorizations from different federal and provincial agencies, and vary from project to project.</p>
+                <p>Major mines in British Columbia require authorizations from different federal and provincial agencies, and vary from project to project.</p>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container">
+<div class="container" id="anchor-point">
     <div class="row">
         <main class="col-lg-8">
             <section>
@@ -26,12 +26,12 @@
                 <p>Authorizations issued under these three acts are available on this website.</p>
                 <p>Established in late 2014, the Ministy of Energy and Mines Major Mine Permitting Office (MMPO) improves the co-ordination of major mine permitting across British Columbia. MMPO brings clear accountability to both industry and government to ensure timely and durable decisions are made with respect to permitting major mine projects around the province.</p>
             </section>
-            <section>
+            <section id="eaProcess">
                 <h3>Environmental Assessment (EA) Process</h3>
                 <p>Proposed major mines and major expansions to existing mines in British Columbia typically require environmental assessment (EA) certificates. The Environmental Assessment Office (EAO) is a neutral agency that manages the assessment of proposed major projects in BC as required by the Environmental Assessment Act. BC has a rigourous EA process that carefully evaluates the potential environmental, economic, social, heritage and health impacts of proposed projects, as well as potential impacts to First Nations interests. Proposed mine projects in BC above production thresholds set out in the Reviewable Projects Regulation of the Environmental Assessment Act automatically trigger the provincial EA process. Project proponents can also “opt in” to the EA process, and the Minister of Environment has the power to designate a project as reviewable.</p>
                 <p>For more information on the BC EA process, please visit http://www.eao.gov.bc.ca/ea_process.html or refer to the EAO User Guide.</p>
             </section>
-            <section>
+            <section id="majorPermits">
                 <h3>Major Permits</h3>
                 <p>The Ministry of Energy and Mines (MEM) and the Ministry of Environment (ENV) have developed a document to outline the information that mining project proponents are required to submit in support of a joint application for a Mines Act permit and a waste discharge permit issued under the Environmental Management Act (EMA). This document is intended for both new and existing major mines, including proposed major expansions/extensions of mining projects. The combined technical information requirements are intended to reduce overlap in technical information required by both ministries and enable one application, or bundled applications, to be submitted for review. While this document is aimed at proponents, it may also serve as a resource to anyone interested in learning more about the kind of information required during the mine permitting process.</p>
                 <ul>
@@ -56,7 +56,7 @@
                     <li><a href="#">More on EMA permits and approval processes</a></li>
                 </ul>
             </section>
-            <section>
+            <section id="otherAuths">
                 <h3>Other Authorizations for Mining Projects in BC</h3>
                 <h4>Tenure Authorizations</h4>
                 <p>In British Columbia, sub-surface rights are different from surface rights, and, like proponents of other industrial activities, mining project proponents are required to apply for tenures. The Mineral Titles Branch of the Ministry of Energy and Mines administers the legislation governing the acquisition, exploration and development of mineral, placer mineral, and coal rights in the province. The branch maintains the coal and mineral titles registries under the Mineral Tenure Act and the Coal Act and associated regulations, and issues licences and leases.</p>
@@ -88,13 +88,18 @@
             <section>
                 <h4>Related Documents</h4>
                 <ul class="mmti-side-list">
-                    <li>Content TBD</li>
+                    <li><a href="http://www.eao.gov.bc.ca/pdf/EAO_User_Guide_20150629.pdf" target="_blank">Environmental Assessment Office User Guide (June 2015)</a></li>
+                    <li><a href="http://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/mineral-exploration-mining/documents/permitting/minesact-ema_application_information_requirements_feb2016.pdf" target="_blank">Joint Application Information Requirements for Mines Act and Environmental Management Act Permits (February 2016)</a></li>
                 </ul>
             </section>
             <section>
                 <h4>External Links &amp; Resources</h4>
                 <ul class="mmti-side-list">
-                    <li>Content TBD</li>
+                    <li><a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/permitting/major-mine-permitting-office" target="_blank">Major Mine Permitting Office (Ministry of Energy and Mines)</a></li>
+                    <li><a href="http://www.eao.gov.bc.ca/ea_process.html" target="_blank">BC Environmental Assessment Process</a></li>
+                    <li><a href="http://www2.gov.bc.ca/gov/content/environment/waste-management/waste-discharge-authorization" target="_blank">Waste Discharge Authorizations (Ministry of Environment)</a></li>
+                    <li><a href="http://www2.gov.bc.ca/gov/content/environment/waste-management/industrial-waste/mining-smelting" target="_blank">Mining & Smelting (Ministry of Environment)</a></li>
+                    <li><a href="https://portal.nrs.gov.bc.ca/web/client/home" target="_blank">Natural Resource Sector Online Services Portal </a></li>
                 </ul>
             </section>
         </aside>
