--- a/modules/compliance-oversight/client/views/compliance-oversight.html
+++ b/modules/compliance-oversight/client/views/compliance-oversight.html
@@ -26,22 +26,16 @@
             <section>
                 <h4>Related Documents</h4>
                 <ul class="mmti-side-list">
-                    <li>
-                        <a class="document-link" href="http://www2.gov.bc.ca/assets/gov/environment/research-monitoring-and-reporting/reporting/reporting-documents/environmental-enforcement-docs/compliance_mgmt_framework.pdf" target="_blank"> 
-                            <span>Ministry of Environment - Compliance Management Framework</span>
-                        </a>
-                    </li>
+                    <li><a href="http://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/mineral-exploration-mining/documents/compliance-and-enforcement/board_tor.pdf" target="_blank">Mining Compliance & Enforcement Board Terms of Reference</a></li>
+                    <li><a href="http://www2.gov.bc.ca/assets/gov/environment/research-monitoring-and-reporting/reporting/reporting-documents/environmental-enforcement-docs/compliance_mgmt_framework.pdf" target="_blank">Ministry of Environment Compliance Management Framework</a></li>
                 </ul>
             </section>
             <section>
                 <h4>External Links &amp; Resources</h4>
                 <ul class="mmti-side-list">
-                    <li>
-                        <a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/compliance-enforcement" target="_blank">Mining Compliance &amp; Enforcement</a>
-                    </li>
-                    <li>
-                        <a href="http://www.eao.gov.bc.ca/compliance.html" target="_blank">Environmental Assessment Office Compliance &amp; Enforcement</a>
-                    </li>
+                    <li><a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/compliance-enforcement" target="_blank">Mining Compliance & Enforcement (Ministry of Energy and Mines) </a></li>
+                    <li><a href="http://www.eao.gov.bc.ca/compliance.html" target="_blank">Environmental Assessment Office Compliance & Enforcement </a></li>
+                    <li><a href="http://www2.gov.bc.ca/gov/content/environment/research-monitoring-reporting/reporting/environmental-enforcement-reporting" target="_blank">Environmental Enforcement Reporting (Ministry of Environment) </a></li>
                 </ul>
             </section>
         </aside>
