--- a/modules/core/client/scss/components/buttons.scss
+++ b/modules/core/client/scss/components/buttons.scss
@@ -92,7 +92,7 @@
 
 main {
     .btn {
-        padding: 0.65rem 0.75rem;
+        padding: 0.5rem;
     }
 }
 
@@ -101,7 +101,7 @@ main {
 }
 
 .content-btn {
-    padding: 0.5rem 0.75rem;
+    padding: 0.25rem 0.75rem;
     background: #EEE;
     font-size: 0.9375rem;
 
