--- a/modules/lifecycle/client/views/mining-lifecycle.html
+++ b/modules/lifecycle/client/views/mining-lifecycle.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container" id="anchor-point">
     <div class="row">
         <main class="col-lg-8">
             <section>
@@ -59,6 +59,18 @@
                     <h5>Monitoring &amp; Reporting</h5>
                     <p class="mb-0">Monitoring includes environmental (e.g., water quality) testing and assessments of structures (e.g., tailings management facilities). Monitoring activities begin long before a mine is constructed in order to gather baseline information on the site.</p>
                 </div>
+            </section>
+            <section>
+                <h4>Related Documents</h4>
+                <ul class="mmti-side-list">
+                    <li><a href="http://www.amebc.ca/documents/resources-and-publications/publications/archive/BC Mining 101 brochure.pdf" target="_blank">Life Cycle of a Mine (Association for Mineral Exploration BC and Mining Association of BC)</a></li>
+               </ul>
+            </section>
+            <section>
+                <h4>External Links &amp; Resources</h4>
+                <ul class="mmti-side-list">
+                    <li><a href="http://www.ec.gc.ca/lcpe-cepa/default.asp?lang=En&n=CBE3CD59-1&offset=4&toc=show" target="_blank">Environmental Code of Practice for Metal Mines – Mine Life Cycle Activities (Environment and Climate Change Canada)</a></li>
+                </ul>
             </section>
         </aside>
     </div>
