--- a/modules/inspections/client/views/project-inspections.html
+++ b/modules/inspections/client/views/project-inspections.html
@@ -34,8 +34,8 @@
                  id="collapse-{{c._id}}"
                  aria-labelledby="heading-{{c._id}}">
                 <div class="mmti-accord-body">
-                    <div class="summary">{{c.inspectionSummary}}</div>
-                    <div class="doc-list-container" ng-if="c.followUpDocuments">
+                    <div class="summary" >{{c.inspectionSummary}}</div>
+                    <div class="doc-list-container" ng-if="c.followUpDocuments.length > 0">
                         <div class="mmti-list-header">Related Documents</div>
                         <ul class="mmti-list"  ng-repeat="r in c.followUpDocuments">
                             <li><a href="{{r.ref}}" target="_blank">{{r.name}}</a></li>
