--- a/modules/core/client/scss/global/header.scss
+++ b/modules/core/client/scss/global/header.scss
@@ -208,6 +208,7 @@ header {
                         > a:hover,
                         > a:focus {
                             background-color: #002663;
+                            border: none;
                         }
 
                         .dropdown-menu {
