MEM-248: add in import csv, server side and client side handling for Other Documents.  Styling remains.

--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -163,7 +163,7 @@
 
                         <!-- Other Documents -->
                         <div class="documents tab-pane" id="docs" role="tabpanel">
-                            Content TBD
+                            <other-documents-list list="otherDocuments"></other-documents-list>
                         </div>
                     </div>
 
