MEM-242 - MMTI Implement Content Links
- Updating Authorizations page with all external links.

--- a/modules/core/client/scss/global/layout.scss
+++ b/modules/core/client/scss/global/layout.scss
@@ -45,6 +45,10 @@ main {
         font-size: 1rem;
         line-height: 1.5rem;
     }
+
+    a {
+        text-decoration: underline;
+    }
 }
 
 @media (min-width: 760px) {
