--- a/modules/authorizations/client/views/authorizations.html
+++ b/modules/authorizations/client/views/authorizations.html
@@ -12,6 +12,8 @@
     </div>
 </div>
 
+<a href="" target="_blank"></a>
+
 <div class="container" id="anchor-point">
     <div class="row">
         <main class="col-lg-8">
@@ -24,26 +26,26 @@
                     <li>Waste discharge permits issued under the Environmental Management Act (Ministry of Environment)</li>
                 </ul>
                 <p>Authorizations issued under these three acts are available on this website.</p>
-                <p>Established in late 2014, the Ministy of Energy and Mines Major Mine Permitting Office (MMPO) improves the co-ordination of major mine permitting across British Columbia. MMPO brings clear accountability to both industry and government to ensure timely and durable decisions are made with respect to permitting major mine projects around the province.</p>
+                <p>Established in late 2014, the Ministy of Energy and Mines <a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/permitting/major-mine-permitting-office" target="_blank">Major Mine Permitting Office (MMPO)</a> improves the co-ordination of major mine permitting across British Columbia. MMPO brings clear accountability to both industry and government to ensure timely and durable decisions are made with respect to permitting major mine projects around the province.</p>
             </section>
             <section id="eaProcess">
                 <h3>Environmental Assessment (EA) Process</h3>
-                <p>Proposed major mines and major expansions to existing mines in British Columbia typically require environmental assessment (EA) certificates. The Environmental Assessment Office (EAO) is a neutral agency that manages the assessment of proposed major projects in BC as required by the Environmental Assessment Act. BC has a rigourous EA process that carefully evaluates the potential environmental, economic, social, heritage and health impacts of proposed projects, as well as potential impacts to First Nations interests. Proposed mine projects in BC above production thresholds set out in the Reviewable Projects Regulation of the Environmental Assessment Act automatically trigger the provincial EA process. Project proponents can also “opt in” to the EA process, and the Minister of Environment has the power to designate a project as reviewable.</p>
-                <p>For more information on the BC EA process, please visit http://www.eao.gov.bc.ca/ea_process.html or refer to the EAO User Guide.</p>
+                <p>Proposed major mines and major expansions to existing mines in British Columbia typically require environmental assessment (EA) certificates. The <a href="http://www.eao.gov.bc.ca/" target="_blank">Environmental Assessment Office (EAO)</a> is a neutral agency that manages the assessment of proposed major projects in BC as required by the <a href="http://www.bclaws.ca/civix/document/id/consol14/consol14/00_02043_01" target="_blank">Environmental Assessment Act</a>. BC has a rigourous EA process that carefully evaluates the potential environmental, economic, social, heritage and health impacts of proposed projects, as well as potential impacts to First Nations interests. Proposed mine projects in BC above production thresholds set out in the <a href="http://www.bclaws.ca/civix/document/id/loo79/loo79/13_370_2002" target="_blank">Reviewable Projects Regulation</a> of the Environmental Assessment Act automatically trigger the provincial EA process. Project proponents can also “opt in” to the EA process, and the Minister of Environment has the power to designate a project as reviewable.</p>
+                <p>For more information on the BC EA process, please visit <a href="http://www.eao.gov.bc.ca/ea_process.html" target="_blank">http://www.eao.gov.bc.ca/ea_process.html</a> or refer to the <a href="http://www.eao.gov.bc.ca/pdf/EAO_User_Guide_20150629.pdf" target="_blank">EAO User Guide.</a></p>
             </section>
             <section id="majorPermits">
                 <h3>Major Permits</h3>
                 <p>The Ministry of Energy and Mines (MEM) and the Ministry of Environment (ENV) have developed a document to outline the information that mining project proponents are required to submit in support of a joint application for a Mines Act permit and a waste discharge permit issued under the Environmental Management Act (EMA). This document is intended for both new and existing major mines, including proposed major expansions/extensions of mining projects. The combined technical information requirements are intended to reduce overlap in technical information required by both ministries and enable one application, or bundled applications, to be submitted for review. While this document is aimed at proponents, it may also serve as a resource to anyone interested in learning more about the kind of information required during the mine permitting process.</p>
                 <ul>
-                    <li><a href="#">Joint Application Information Requirements for Mines Act and EMA Permits</a></li>
+                    <li><a href="http://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/mineral-exploration-mining/documents/permitting/minesact-ema_application_information_requirements_feb2016.pdf" target="_blank">Joint Application Information Requirements for Mines Act and EMA Permits</a></li>
                 </ul>
                 <h4>Mine Act Permits</h4>
-                <p>Proposed major mines (e.g., metal and coal mines as well as some large aggregate and industrial minerals operations), major expansions/upgrades to existing mines, and some large-scale exploration/development projects require approval under the Mines Act as per part 10 of the Health, Safety and Reclamation Code for Mines in British Columbia (the Code).</p>
+                <p>Proposed major mines (e.g., metal and coal mines as well as some large aggregate and industrial minerals operations), major expansions/upgrades to existing mines, and some large-scale exploration/development projects require approval under the <a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96293_01" target="_blank">Mines Act</a> as per part 10 of the <a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/health-safety/health-safety-and-reclamation-code-for-mines-in-british-columbia" target="_blank">Health, Safety and Reclamation Code for Mines in British Columbia (the Code)</a>.</p>
                 <p>The Chief Inspector of Mines (or a delegated Inspector of Mines) is the statutory decision maker (SDM) for Mines Act permits. Applications for Mines Act permits, including applications for exploration programs, are typically referred by MEM to other agencies and First Nations to review and provide comments that inform the SDM when making a decision on whether to issue a permit.</p>
-                <p>The Mines Act permitting process includes on-site activities, such as the management of water quality, waste and metal leaching and acid rock drainage (ML/ARD) at the mine, as well as geotechnical design and reclamation and closure planning.</p>
+                <p>The Mines Act permitting process includes on-site activities, such as the management of water quality, waste and <a href="" target="_blank">metal leaching and acid rock drainage (ML/ARD)</a> at the mine, as well as <a href="" target="_blank">geotechnical design</a> and reclamation and closure planning.</p>
                 <p>Depending on the complexity of the proposal, an application is reviewed by either the relevant regional Mine Development Review Committee or a project-specific Mine Review Committee before the SDM makes a decision.</p>
                 <h4>Environmental Management Act (EMA) Permits</h4>
-                <p>Because major mining operations discharge material to the environment, they require waste discharge authorizations under the Environmental Management Act (EMA). Waste discharge authorizations are required for the following:</p>
+                <p>Because major mining operations discharge material to the environment, they require waste discharge authorizations under the <a href="http://www.bclaws.ca/civix/document/id/complete/statreg/03053_00" target="_blank">Environmental Management Act (EMA)</a>. Waste discharge authorizations are required for the following:</p>
                 <ul>
                     <li>Effluent discharges (e.g., tailings pond supernatant, mine-influenced run-off and sewage);</li>
                     <li>Air emissions (e.g., refuse incinerator emissions, emissions from large power-generating plants, emissions from milling processes, etc.); and</li>
@@ -53,16 +55,16 @@
                 <p>An approval issued under EMA is similar to an EMA permit, but it is issued for short-term discharges up to a maximum of 15 months duration. An approval may be amended, suspended, cancelled or transferred and will automatically expire at the end of its term. If a discharge is expected to go beyond the maximum 15-month discharge period, a permit is required.</p>
                 <p>Authorizations for mining under EMA are issued by the Ministry of Environment’s Environmental Protection Division (EPD) Mining Authorizations team.</p>
                 <ul>
-                    <li><a href="#">More on EMA permits and approval processes</a></li>
+                    <li><a href="http://www2.gov.bc.ca/gov/content/environment/waste-management/waste-discharge-authorization" target="_blank">More on EMA permits and approval processes</a></li>
                 </ul>
             </section>
             <section id="otherAuths">
                 <h3>Other Authorizations for Mining Projects in BC</h3>
                 <h4>Tenure Authorizations</h4>
-                <p>In British Columbia, sub-surface rights are different from surface rights, and, like proponents of other industrial activities, mining project proponents are required to apply for tenures. The Mineral Titles Branch of the Ministry of Energy and Mines administers the legislation governing the acquisition, exploration and development of mineral, placer mineral, and coal rights in the province. The branch maintains the coal and mineral titles registries under the Mineral Tenure Act and the Coal Act and associated regulations, and issues licences and leases.</p>
+                <p>In British Columbia, sub-surface rights are different from surface rights, and, like proponents of other industrial activities, mining project proponents are required to apply for tenures. The Mineral Titles Branch of the Ministry of Energy and Mines administers the legislation governing the acquisition, exploration and development of mineral, placer mineral, and coal rights in the province. The branch maintains the coal and mineral titles registries under the <a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96292_01" target="_blank">Mineral Tenure Act</a> and the <a href="http://www.bclaws.ca/civix/document/id/complete/statreg/00_04015_01" target="_blank">Coal Act</a> and associated regulations, and issues licences and leases.</p>
                 <ul>
-                    <li>Learn more about claims, licences and leases</li>
-                    <li>Crown land tenure</li>
+                    <li><a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/mineral-titles" target="_blank">Learn more about claims, licences and leases</a></li>
+                    <li><a href="http://www2.gov.bc.ca/gov/content/industry/natural-resource-use/land-use/crown-land/legislation-agreements/acts-regulations" target="_blank">Crown land tenure</a></li>
                 </ul>
                 <h4>Ministry of Forests, Lands and Natural Resource Operations (FLNRO) Authorizations</h4>
                 <p>FLNRO is responsible for:</p>
@@ -77,10 +79,10 @@
                 <p>To learn more about authorizations issued by FLNRO, please visit the <a href="https://portal.nrs.gov.bc.ca/web/client/home" target="_blank">Natural Resource Sector Online Services portal.</a></p>
                 <h4>Federal Government Authorizations</h4>
                 <ul>
-                    <li>Most major mines in British Columbia require Fisheries Act authorizations</li>
-                    <li>The Canadian Environmental Assessment Agency (CEAA) conducts reviews of major projects across Canada, including major mine projects in British Columbia, under the Canadian Environmental Assessment Act, 2012. If a major mine project is deemed reviewable by CEAA, it requires federal environmental assessment (EA) approval.</li>
+                    <li>Most major mines in British Columbia require <a href="http://laws-lois.justice.gc.ca/eng/acts/f-14/" target="_blank">Fisheries Act</a> authorizations</li>
+                    <li>The Canadian Environmental Assessment Agency (CEAA) conducts reviews of major projects across Canada, including major mine projects in British Columbia, under the <a href="http://laws-lois.justice.gc.ca/eng/acts/c-15.21/index.html" target="_blank">Canadian Environmental Assessment Act, 2012</a>. If a major mine project is deemed reviewable by CEAA, it requires federal environmental assessment (EA) approval. <a href="http://www.eao.gov.bc.ca/federal_relations.html" target="_blank">Learn about federal-provincial EA relations</a>.</li>
                     <li>Other federally managed statutes may also apply to major mine projects in British Columbia, and authorizations under these statutes may be required.</li>
-                    <li>The Government of Canada’s Major Project Management Office (MPMO) manages major resource projects in the federal regulatory review process, including some major mine projects in BC.</li>
+                    <li>The Government of Canada’s Major Project Management Office (MPMO) manages major resource projects in the federal regulatory review process, including some major mine projects in BC. <a href="https://mpmo.gc.ca/home" target="_blank">Learn more about the federal MPMO</a>.</li>
                 </ul>
             </section>
         </main>
