MEM-242 - MMTI Implement Content Links
- Updating legislation.html with new content.

--- a/modules/legislation/client/views/legislation.html
+++ b/modules/legislation/client/views/legislation.html
@@ -10,6 +10,113 @@
     </div>
 </div>
 
-<div class="container" id="anchor-top">
-
+<div class="container" id="anchor-point">
+    <div class="row">
+        <main class="col-lg-8">
+            <section>
+            <h2>Key Statutes &amp; Regulations for Mining in British Columbia</h2>
+            </section>
+            <section>
+                <h3>Provincial Statutes</h3>
+                <section class="mt-0">
+                    <h4>Environmental Assessment Act</h4>
+                    <p>The Environmental Assessment Act provides a mechanism for reviewing proposed major projects in British Columbia, including major mining projects, to assess their potential impacts. The Environmental Assessment Office (EAO) manages the assessment of proposed major projects as required by the Environmental Assessment Act.</p>
+                    <ul>
+                        <li>Environmental Assessment Act</li>
+                        <li>Environmental assessment (EA) process and EA certificates issued to major mines under the Environmental Assessment Act</li>
+                    </ul>
+                    <section>
+                        <h5>Reviewable Projects Regulation (Environmental Assessment Office)</h4>
+                        <p>The Reviewable Projects Regulation of the Environmental Assessment Act provides for a broad range of major projects to be automatically reviewable if they meet certain thresholds, such as area or production volume.</p>
+                        <ul>
+                            <li>Reviewable Projects Regulation</li>
+                        </ul>
+                    </section>
+                </section>
+                <section>
+                    <h4>Mines Act (Ministry of Energy and Mines)</h4>
+                    <p>The Mines Act and the accompanying Health, Safety and Reclamation Code for Mines in British Columbia (the Code) protect workers, the public and the environment through provisions for minimizing the health, safety and environmental risks related to mining activities. Proposed major mines (e.g., metal and coal), major expansions/upgrades to existing mines, and some large-scale exploration/development projects require approval under the Mines Act as per part 10 of the Code.</p>
+                    <ul>
+                        <li>Mines Act</li>
+                        <li>Health, Safety and Reclamation Code for Mines in British Columbia</li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Environmental Management Act (Ministry of Environment)</h4>
+                    <p>The Environmental Management Act (EMA) regulates industrial and municipal waste discharge, pollution, hazardous waste and contaminated site remediation. EMA provides the authority for introducing wastes into the environment, while protecting public health and the environment. The Act enables the use of permits, regulations and codes of practice to authorize discharges to the environment and enforcement options, such as administrative penalties, orders and fines to encourage compliance. Guidelines and objectives for water quality are developed under EMA.</p>
+                    <ul>
+                        <li>Environmental Management Act</li>
+                    </ul>
+                    <section>
+                        <h5>Waste Discharge Regulation (Ministry of Environment)</h5>
+                        <p>The Waste Discharge Regulation identifies those industries and activities requiring authorizations to discharge under the Environmental Management Act (EMA).</p>
+                        <ul>
+                            <li>Read EMA’s Waste Discharge Regulation</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h5>Other EMA Regulations that May Apply to Mining Operations in BC</h5>
+                        <p>The Waste Discharge Regulation identifies those industries and activities requiring authorizations to discharge under the Environmental Management Act (EMA).</p>
+                        <ul>
+                            <li>Contaminated Sites Regulation</li>
+                            <li>Hazardous Waste Regulation</li>
+                            <li>Municipal Wastewater Regulation</li>
+                            <li>Placer Mining Waste Control Regulation</li>
+                        </ul>
+                    </section>
+                </section>
+                <section>
+                    <h4>Tenure</h4>
+                    <ul>
+                        <li>Mineral Tenure Act</li>
+                        <li>Coal Act</li>
+                        <li>Land Act</li>
+                        <li>Mining Right of Way Act</li>
+                        <li>Learn about tenure authorizations for mining projects</li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Legislation Administered by the Ministry of Forests, Lands and Natural Resource Operations (FLNRO) that May Apply to Mining Operations in BC</h4>
+                    <ul>
+                        <li>Heritage Conservation Act</li>
+                        <li>Water Sustainability Act</li>
+                        <li>Forest Act</li>
+                        <li>Forest and Range Practices Act</li>
+                        <li>Widlife Act</li>
+                        <li>Learn about FLNRO authorizations for major mine projects</li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Other Provincial Statutes that May Apply to Mining Operations in BC</h4>
+                    <ul>
+                        <li>Drinking Water Protection Act</li>
+                        <li>Environment and Land Use Act</li>
+                        <li>Public Health Act</li>
+                        <li>Riparian Areas Protection Act</li>
+                        <li>Water Users’ Communities Act</li>
+                    </ul>
+                </section>
+            </section>
+            <section>
+                <h3>Federal Statutes</h3>
+                <section>
+                    <h4>Fisheries Act</h4>
+                    <p>Fisheries and Oceans Canada and Environment Canada are responsible for the Fisheries Act. This act’s Metal Mining Effluent Regulations apply to most major mine projects in BC.</p>
+                </section>
+                <section>
+                    <h4>Canadian Environmental Act</h4>
+                    <p>The Canadian Environmental Assessment Agency conducts reviews of major projects across Canada, including major mine projects in British Columbia, under the Canadian Environmental Assessment Act, 2012.</p>
+                </section>
+                <section>
+                    <h4>Other Federal Statutes</h4>
+                    <ul>
+                        <li>Canadian Environmental Protection Act</li>
+                        <li>Migratory Birds Convention Act</li>
+                        <li>Navigation Protection Act</li>
+                        <li>Species at Risk Act</li>
+                    </ul>
+                </section>
+            </section>
+        </main>
+    </div>
 </div>
