--- a/modules/core/client/scss/components/mmti-accord.scss
+++ b/modules/core/client/scss/components/mmti-accord.scss
@@ -24,6 +24,10 @@
     table-layout: fixed;
     background: #F7F8FA;
 
+    a {
+        text-decoration: none;
+    }
+
     div {
         display: table-row;
         width: 100%;
