--- a/modules/core/client/scss/components/tab-nav.scss
+++ b/modules/core/client/scss/components/tab-nav.scss
@@ -16,6 +16,7 @@
         padding: 0.75rem;
         border-radius: 0;
         background-color: #EEE;
+        text-decoration: none;
         font-size: 0.85rem;
 
         &.active {
