MEM-234 seed db, server/client api, populate html. needs refinement

--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -51,104 +51,10 @@
                                ng-bind-html="content(project, 'INTRO_TEXT', 'AUTHORIZATION')"></p>
                             -->
                             <p class="tab-intro">Environmental assessment certificates and permits issued under the Mines Act and the Environmental Management Act (EMA) are the primary provincial authorizations for major mine projects in British Columbia. Below you will find a list of authorizations associated with each of these three acts. <span>Learn more about Authorizations <a ui-sref="authorizations">here</a>.</span></p>
-                            
-                            <section class="auth-list-section">
-                                <h3>Environmental Assessment Act <span>Environmental Assessment Office</span></h3>
 
-                                <div class="mmti-accord authorizations-list">
-                                    <div class="mmti-accord-item">
-                                        <div class="mmti-accord-header" role="tab" id="headingOne">
-                                            <div>
-                                                <a class="toggle collapsed" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                    <i class="material-icons open-icon">add</i>
-                                                    <i class="material-icons close-icon">remove</i>
-                                                </a>
-                                                <span class="ah-col name"><a ui-sref="project({projectid: p.code})">Environmental Assessment Certificate</a></span>
-                                                <span class="ah-col date">Issued &nbsp;|&nbsp; 2009-03-16</span>
-                                            </div>
-                                        </div>
-                                        <div class="collapse" role="tabpanel"
-                                            id="collapseOne"
-                                            aria-labelledby="headingOne">
-                                            <div class="mmti-accord-body">
-                                                Content TBD
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="mmti-accord-item">
-                                        <div class="mmti-accord-header" role="tab" id="headingTwo">
-                                            <div>
-                                                <a class="toggle collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                                                    <i class="material-icons open-icon">add</i>
-                                                    <i class="material-icons close-icon">remove</i>
-                                                </a>
-                                                <span class="ah-col name"><a ui-sref="project({projectid: p.code})">Environmental Assessment Certificate - Amendement</a></span>
-                                                <span class="ah-col date">Certificate Amended &nbsp;|&nbsp; 2013-03-01</span>
-                                            </div>
-                                        </div>
-                                        <div class="collapse" role="tabpanel"
-                                            id="collapseTwo"
-                                            aria-labelledby="headingTwo">
-                                            <div class="mmti-accord-body">
-                                                Content TBD
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </section>
-
-                            <section class="auth-list-section">
-                                <h3>Environmental Management Act <span>Ministry of Environment</span></h3>
-                                <ul>
-                                    <li class="flex-row">
-                                        <span class="auth-name">
-                                            <a href="https://mem-mmt-test.pathfinder.gov.bc.ca/api/document/582a2d5348077f0017feb5a0/fetch" target="_blank">Air Permit</a>
-                                        </span>
-                                        <span class="auth-date">Permit Amended &nbsp;|&nbsp; 2016-06-22</span>
-                                    </li>
-                                    <li class="flex-row">
-                                        <span class="auth-name">
-                                            <a href="https://mem-mmt-test.pathfinder.gov.bc.ca/api/document/582a2d5348077f0017feb5a1/fetch" target="_blank">Effluent Permit</a>
-                                        </span>
-                                        <span class="auth-date">Permit Amended &nbsp;|&nbsp; 2016-06-22</span>
-                                    </li>
-                                    <li class="flex-row">
-                                        <span class="auth-name">
-                                            <a href="https://mem-mmt-test.pathfinder.gov.bc.ca/api/document/582a2d5348077f0017feb5a2/fetch" target="_blank">Landfill Permit</a>
-                                        </span>
-                                        <span class="auth-date">Permit Amended &nbsp;|&nbsp; 2016-06-21</span>
-                                    </li>
-                                </ul>
-                            </section>
-                            <section class="auth-list-section">
-                                <h3>Mines Act <span>Ministry of Energy and Mines</span></h3>
-                                <ul class="authorizations-list">
-                                    <li class="flex-row">
-                                        <span class="auth-name">
-                                            <a href="https://mines.empr.gov.bc.ca/api/document/5822594b6d6ad30017cd6b81/fetch" target="_blank">Approval to Operate Tailings Storage Facility</a>
-                                        </span>
-                                        <span class="auth-date">Permit Amended &nbsp;|&nbsp; 2013-06-05</span>
-                                    </li>
-                                    <li class="flex-row">
-                                        <span class="auth-name">
-                                            <a href="https://mines.empr.gov.bc.ca/api/document/582259466d6ad30017cd6b40/fetch" target="_blank">Approval Construction of a Blend and Feed Ore Stockpile</a>
-                                        </span>
-                                        <span class="auth-date">Permit Amended &nbsp;|&nbsp; 2013-04-16</span>
-                                    </li>
-                                    <li class="flex-row">
-                                        <span class="auth-name">
-                                            <a href="https://mines.empr.gov.bc.ca/api/document/582259536d6ad30017cd6bf6/fetch" target="_blank">Approving Change in Security Schedule</a></span>
-                                        <span class="auth-date">Permit Amended &nbsp;|&nbsp; 2010-07-14</span>
-                                    </li>
-                                    <li class="flex-row">
-                                        <span class="auth-name">
-                                            <a href="https://mines.empr.gov.bc.ca/api/document/5822597e6d6ad30017cd6db0/fetch" target="_blank">Approving Change in Security Schedule</a>
-                                        </span>
-                                        <span class="auth-date">Permit Issued &nbsp;|&nbsp; 2009-09-08</span>
-                                    </li>
-                                </ul>
-                            </section>
+                            <tmpl-project-authorizations project="project" agency="EAO"></tmpl-project-authorizations>
+                            <tmpl-project-authorizations project="project" agency="ENV"></tmpl-project-authorizations>
+                            <tmpl-project-authorizations project="project" agency="MEM"></tmpl-project-authorizations>
                         </div><!-- / Authorizations -->
 
                         <!-- Compliance Oversight -->
